--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,10 @@
     }
 }
 
+@media(max-width: 640px) {
+    .bars {display: none}
+}
+
 main {
     position: relative;
 }
@@ -88,7 +92,6 @@ main::after {
  }
 
  .experience .icons {
-    font-size: 6rem;
     align-self: center;
     color: rgb(250 204 21)
  }
