--- a/app/globals.css
+++ b/app/globals.css
@@ -106,6 +106,39 @@ main::after {
     animation: loader 1s linear infinite alternate;
  }
 
+.up-to-down {
+    animation: upToDown 1s ease-out;
+}
+
+.box {
+    box-shadow: inset 0 0 .3rem rgb(250 204 21);
+    padding: 1rem 20px;
+}
+
+.box .circle {
+    background: conic-gradient(from 0deg, rgb(250 204 21) 0%, rgb(250 204 21) 0% var(--i), rgb(254 240 138) var(--i), rgb(254 240 138) 100%);
+    
+}
+
+.box .circle::before {
+    content: '';
+    position: absolute;
+    inset: 10px;
+    background-color: #fff;
+    border-radius: 50%
+}
+
+@keyframes upToDown {
+    from {
+        transform: translateY(-2rem);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
  @keyframes loader {
     0% {
         background-color: rgb(250 204 21);
