--- a/app/globals.css
+++ b/app/globals.css
@@ -127,7 +127,39 @@ main::after {
     background-color: #fff;
     border-radius: 50%
 }
+.service-icon-container {
+    position: relative;
+}
 
+.service-icon-container::before {
+    content: '';
+    position: absolute;
+    background-color: rgb(234 179 8);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    left: 0;
+    top: -15px;
+    z-index: -1;
+}
+
+.service-icon-container::after {
+    content: '';
+    position: absolute;
+    background-color: rgb(250 204 21);
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    left: -10px;
+    bottom: -10px;
+    z-index: -1;
+}
+.portfolio-details {
+    background-image: linear-gradient(45deg,  rgba(234, 179, 8, 0.6), transparent), url("../public/images/LM3.png");
+    background-position: top;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 @keyframes upToDown {
     from {
         transform: translateY(-2rem);
