--- a/app/globals.css
+++ b/app/globals.css
@@ -135,23 +135,27 @@ main::after {
     content: '';
     position: absolute;
     background-color: rgb(234 179 8);
-    width: 100%;
-    height: 100%;
+    width: 120%;
+    height: 120%;
     border-radius: 50%;
-    left: 0;
-    top: -15px;
+    /* left: 0;
+    top: -15px; */
+    left: -14%;
+    top: -18%;
     z-index: -1;
 }
 
 .service-icon-container::after {
     content: '';
     position: absolute;
-    background-color: rgb(250 204 21);
-    width: 100%;
-    height: 100%;
+    background-color: rgb(255, 218, 72);
+    width: 110%;
+    height: 110%;
     border-radius: 50%;
-    left: -10px;
-    bottom: -10px;
+    /* left: -10px;
+    bottom: -10px; */
+    right: -11%;
+    top: -11%;
     z-index: -1;
 }
 .portfolio-details {
@@ -159,6 +163,71 @@ main::after {
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
+}
+.opera-container {
+    animation: spin 2s linear infinite;
+}
+.opera-container2 {
+    animation: spin2 2s linear infinite;
+}
+
+.round-div{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #fff;
+    position: relative;
+    padding: 0 1rem;
+    text-align: center;
+}
+
+.round-div::before {
+    content: '';
+    position: absolute;
+    left: -16%;
+    top: -18%;
+    width: 120%;
+    height: 120%;
+    /* background-color: rgb(234 179 8); */
+    background-color: var(--before);
+    border-radius: 50%;
+    z-index: -1;
+}
+
+.round-div::after {
+    content: '';
+    position: absolute;
+    right: -11%;
+    top: -11%;
+    width: 110%;
+    height: 110%;
+    /* background-color: rgb(255, 218, 72); */
+    background-color: var(--after);
+    border-radius: 50%;
+    z-index: -1;
+}
+
+@keyframes spin {
+
+    0%,
+    100% {
+        transform: translateY(-10px);
+    }
+
+    50% {
+        transform: translateY(10px);
+    }
+}
+@keyframes spin2 {
+
+    0%,
+    100% {
+        transform: translateY(0px);
+    }
+
+    50% {
+        transform: translateY(0px);
+    }
 }
 @keyframes upToDown {
     from {
